Edit Course outline including remote repo (Github)

--- a/text1.html
+++ b/text1.html
@@ -1,6 +1,8 @@
 <head>
-   <title>Git Tutorial</title>
+   <title>Git & Github Tutorial</title>
 </head>
 <body>
-EP01. Basic Git Tutorial
+EP01. Basic Git & Github Tutorial
+=================================
+email:School@gmail.com
 </body>
